# cmake_boost_template

./: CMakeLists.txt  README.md
src/: boost_test.cpp  boost_test.hpp  main.cpp
tests/: CMakeLists.txt  test1.cpp  tests2.cpp
